# Reinforcement-Learning

./: 00_human_lunar_lander_benchmark.py  01_deep_q_learning.ipynb  02_VPG.py  02_vanilla_policy_gradients.ipynb  0a_q_learning.ipynb  0b_q_learning_2x3.ipynb  LunarLander_in_Action_ONNX.py  LunarLander_in_Action_PyTorch.py  Makefile  README.md  plot_rl_results.py  pyproject.toml  ruff.toml
src/deep-q-learning/: 01_deep_q_learning.ipynb  README.md
src/human-benchmark/: 00_human_lunar_lander_benchmark.py
src/policy-graidents/: 02_VPG.py
src/q-learning/: q_learning.ipynb  q_learning_2x3_simple_world.ipynb  q_learning_2x3_world.ipynb
src/run-lunar-lander/: LunarLander_in_Action_ONNX.py
src/utils/: model_saver.py
training_output_lunar_lander/discrete/deep_q_network_lunar_lander/: trained_dqn_2025-12-13_23-18.onnx  trained_dqn_2025-12-13_23-18.pth  trained_dqn_2026-02-22_16-10.onnx  trained_dqn_2026-02-22_16-10.onnx.data  trained_dqn_2026-02-22_16-10.pth
