[project]
name = "reinforcement-learning"

version = "0.2.0"

description = "Code for Edreate's Deep Reinforcement Learning Course: https://edreate.com/courses/deep-reinforcement-learning/"

readme = "README.md"

requires-python = "==3.13.12"

dependencies = [
    "gymnasium[box2d]>=1.2.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.2",
    "onnxscript>=0.6.2",
    "ruff>=0.15.2",
    "swig>=4.4.1",
    "torch>=2.10.0",
]

